# particle-firmware

./: .gitignore  .gitmodules  CNAME  README.md  index.html  init.sh  params.json
src/avr/: .gitignore  CMakeLists.txt  README.md
src/avr/avr-common/: CMakeLists.txt
src/avr/avr-common/scripts/: CMakeLists.txt  README.md  custom_cmake_targets.cmake  erase_flash.sh  post_binary_build.cmake  utils.sh  verify_flash.sh  write_flash.sh  write_fuse.sh
src/avr/avr-common/scripts/avrora/: CMakeLists.txt  avrora.sh
src/avr/avr-common/scripts/debug/: CMakeLists.txt  start-gdb.sh
src/avr/avr-common/targets/: avrdude_ft232rl-dasa_attiny20.conf  compile_settings_debug.cmake  compile_settings_global.cmake  compile_settings_release.cmake  cpu_attiny1634.cmake  cpu_attiny20.cmake  cpu_clock_16000000.cmake  cpu_m16.cmake  cpu_m32.cmake  cpu_m324p.cmake  debugger_serial_tty.cmake  programmer_dragon_isp_m324p.cmake  programmer_dragon_isp_m48.cmake  programmer_dragon_isp_m8.cmake  programmer_ft232rl.cmake
src/avr/avr-common/utils/: CMakeLists.txt
src/avr/avr-common/utils/common/: CMakeLists.txt  CommPortDefinition.h  PortADefinition.h  PortBDefinition.h  PortCDefinition.h  PortDDefinition.h  PortInteraction.h  common.h  pure_virtual_pita.c
src/avr/avr-common/utils/simulation/: CMakeLists.txt  SimulationMacros.h  SimulationUtils.c  SimulationUtils.h
src/avr/avr-common/utils/uc-core/: CMakeLists.txt  DefaultIsr.h  Globals.h  Indicator.c  Indicator.h  InterruptDefinitions.h  Interrupts.c  Interrupts.h  IoDefinitions.h  Particle.c  Particle.h  ParticleCore.h  ParticleInterruptDefinitions.h  ParticleIoDefinitions.h  ParticleLoop.c  ParticleLoop.h  ParticleMainLoop.c  ParticleMainLoop.h  ParticleParameters.h  ParticleStateTypes.h  ParticleStateTypesCtors.h  ParticleTypes.h
src/avr/avr-common/utils/uc-core/actuation/: Actuation.h  ActuationTypes.h  ActuationTypesCtors.h
src/avr/avr-common/utils/uc-core/communication/: CMakeLists.txt  Communication.c  Communication.h  CommunicationTypes.c  CommunicationTypes.h  CommunicationTypesCtors.h  ManchesterCoding.h  ManchesterDecoding.h  ManchesterDecodingTypes.h  ManchesterDecodingTypesCtors.h  PointerImplementation.h  Reception.h  Transmission.h
src/avr/avr-common/utils/uc-core/communication-protocol/: Commands.h  CommunicationProtocol.h  CommunicationProtocolPackageCtors.h  CommunicationProtocolPackageTypes.h  CommunicationProtocolPackageTypesCtors.h  CommunicationProtocolTypes.h  CommunicationProtocolTypesCtors.h  Interpreter.h  InterpreterTypes.h
src/avr/avr-common/utils/uc-core/configuration/: Actuation.h  Communication.h  CommunicationProtocol.h  Discovery.h  IoPins.h  Particle.h  Periphery.h  Time.h
src/avr/avr-common/utils/uc-core/delay/: delay.h
src/avr/avr-common/utils/uc-core/discovery/: Discovery.c  Discovery.h
src/avr/avr-common/utils/uc-core/fw-configuration/: ParticleParameters.h
src/avr/avr-common/utils/uc-core/interrupts/: Interrupts.c  Interrupts.h  Reception.h  TimerCounter.h  Vectors.h
src/avr/avr-common/utils/uc-core/io-configuration/: IoDefinitions.h
src/avr/avr-common/utils/uc-core/particle/: Commands.h  Globals.h  ParticleCore.h  ParticleLoop.h  ParticleStateTypes.h  (+2 more)
src/avr/manchester-code-tx-simulation/: CMakeLists.txt  crosscompile.cmake
src/avr/manchester-code-tx-simulation/libs/: CMakeLists.txt  simulation
src/avr/manchester-code-tx-simulation/main/: CMakeLists.txt  main.c
src/avr/particle/: CMakeLists.txt  crosscompile.cmake
src/avr/particle-initial-io-test/: CMakeLists.txt  crosscompile.cmake  programmer.cmake
src/avr/particle-initial-io-test/libs/: CMakeLists.txt
src/avr/particle-initial-io-test/main/: CMakeLists.txt  DefaultIsr.c  main.c
src/avr/particle-protoboard-hw-test/: .cproject  CMakeLists.txt  avrdude.conf  crosscompile.cmake
src/avr/particle-protoboard-hw-test/main/: CMakeLists.txt  main.c
src/avr/particle-protoboard-hw-test/scripts/: CMakeLists.txt
src/avr/particle-protoboard-io-test/: CMakeLists.txt
src/avr/particle-reception-simulation/: CMakeLists.txt
src/avr/particle-reception-simulation/libs/: CMakeLists.txt
src/avr/particle-reception-simulation/main/: CMakeLists.txt  main.c
src/avr/particle-simulation/: CMakeLists.txt  avrora  crosscompile.cmake
src/avr/particle-simulation-heatwires-test/: CMakeLists.txt
src/avr/particle-simulation-heatwires-test/main/: main.c
src/avr/particle-simulation-heatwiresmode-test/: CMakeLists.txt
src/avr/particle-simulation-heatwiresmode-test/main/: avrora
src/avr/particle-simulation-heatwiresrange-test/: crosscompile.cmake
src/avr/particle-simulation-heatwiresrange-test/main/: CMakeLists.txt  main.c
src/avr/particle-simulation-io-test/: CMakeLists.txt  crosscompile.cmake
src/avr/particle-simulation-io-test/libs/: CMakeLists.txt  common
src/avr/particle-simulation-io-test/main/: CMakeLists.txt  main.c
src/avr/particle-simulation-sendheader-test/: CMakeLists.txt
src/avr/particle-simulation-sendheader-test/main/: CMakeLists.txt
src/avr/particle-simulation-setnewnetworkgeometry-test/: CMakeLists.txt
src/avr/particle-simulation-setnewnetworkgeometry-test/libs/: CMakeLists.txt
src/avr/particle-simulation-setnewnetworkgeometry-test/main/: main.c
src/avr/particle-simulation/libs/: CMakeLists.txt
src/avr/particle-simulation/main/: CMakeLists.txt  main.c
src/avr/particle-simulation/simulavr/: CMakeLists.txt
src/avr/particle-transmission-simulation/: CMakeLists.txt  crosscompile.cmake
src/avr/particle-transmission-simulation/main/: main.c
src/avr/particle-unit-tests/: CMakeLists.txt  crosscompile.cmake  debugger.cmake
src/avr/particle-unit-tests/libs/: uc-core
src/avr/particle-unit-tests/main/: CMakeLists.txt  DefaultIsr.c  main.c  main.cpp
src/avr/particle-unit-tests/simulavr/: CMakeLists.txt  simulate-with-pipes.sh
src/avr/particle-visualizer/: pom.xml
src/avr/particle/libs/: CMakeLists.txt  uc-core
src/avr/particle/main/: CMakeLists.txt  main.c
src/particle/main/: CMakeLists.txt  DefaultIsr.c  DefaultIsr.cpp  InterruptFlags.cpp  InterruptFlags.h  fuses.h  main.c  main.cpp
(+320 files in other folders)
